# ai_agent_for_csv

./: .env  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: baseline_agent.py  hf_agent.py  llm_agent.py
api/: main.py
data/: dirty.csv
env/: __init__.py  environment.py  models.py  tasks.py
server/: app.py
